Made changes to many H/M ps cases. Split H/M ps pred case into two. Used pattern matching/verbatim reduction rules where possible in H/M ps cases.

--- a/proof/cases/progress/haskell-ml/cons-mv.tex
+++ b/proof/cases/progress/haskell-ml/cons-mv.tex
@@ -1,7 +1,7 @@
 \begin{case}
 
-$e_{A}=\mathtt{cons}\;v_{A}^{1}\;v_{A}^{2}$ where $A\in\lbrace M,S\rbrace$
+$e_{M}=\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2}$
 
-$\mathtt{cons}\;v_{A}^{1}\;v_{A}^{2}$ is a value.
+$\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2}$ is a value.
 
 \end{case}
