--- a/proof/cases/progress/haskell-ml/variable.tex
+++ b/proof/cases/progress/haskell-ml/variable.tex
@@ -1,6 +1,6 @@
 \begin{case}
 
-$e_{A}=x$ where $A\in\lbrace H,M,S\rbrace$
+$e_{A}=x$ where $A\in\lbrace H,M\rbrace$
 
 Cannot occur because $e_{A}$ is closed.
 
