--- a/proof/cases/progress/haskell-ml/number.tex
+++ b/proof/cases/progress/haskell-ml/number.tex
@@ -1,6 +1,6 @@
 \begin{case}
 
-$e_{A}=\overline{n}$ where $A\in\lbrace H,M,S\rbrace$
+$e_{A}=\overline{n}$ where $A\in\lbrace H,M\rbrace$
 
 $\overline{n}$ is a value.
 
