More ps fixes, H/M and S cases.

--- a/proof/cases/preservation/wrong.tex
+++ b/proof/cases/preservation/wrong.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$\mathtt{wrong}^{T_{1}}$ \emph{string} $\rightarrow$ \emph{\textbf{Error}:\;string}
+$\mathtt{wrong}^{T_{1}}$ \emph{string} $\rightarrow$ \emph{\textbf{Error}: string}
 
 Irrelevant because an error terminates the computation.
 \end{case}
