--- a/proof/cases/progress/haskell-ml/scheme.tex
+++ b/proof/cases/progress/haskell-ml/scheme.tex
@@ -32,7 +32,7 @@ $^{[T_{1}]}AS$ $\mathtt{nil}\rightarrow\mathtt{nil}^{T_{1}}$.  $^{[T_{1}]}AS$ $(
 
 $T=T_{1}^{a}$
 
-$^{T_{1}^{a}}AS$ $(SA^{T_{1}^{a}}$ $e_{A}^{1})\rightarrow e_{A}^{1}$.  $^{T_{1}^{a}}AS$ $e_{S}^{1}\rightarrow{^{T_{1}^{a}}A}S$ $(\mathtt{wrong}$ $\mathrm{``Parametricity\;violated"})$ $(e_{S}^{1}\neq SA^{T_{1}^{a}}$ $e_{A}^{1})$.
+$^{T_{1}^{a}}AS$ $(SA^{T_{1}^{a}}$ $e_{A}^{1})\rightarrow e_{A}^{1}$.  $^{T_{1}^{a}}AS$ $e_{S}^{1}\rightarrow{^{T_{1}^{a}}A}S$ $(\mathtt{wrong}$ \emph{``Parametricity violated"}$)$ $(e_{S}^{1}\neq SA^{T_{1}^{a}}$ $e_{A}^{1})$.
 
 \end{subcase}
 
