--- a/proof/cases/progress/scheme/fields.tex
+++ b/proof/cases/progress/scheme/fields.tex
@@ -2,6 +2,6 @@
 
 $e_{S}=f$ $e_{S}^{1}$
 
-$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $f$ $e_{S}^{1}\rightarrow f$ $e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $f$ $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{S}^{1}$ is a value otherwise.  If $e_{S}^{1}=\mathtt{cons}$ $e_{S}^{3}$ $e_{S}^{4}$ then $f$ $(\mathtt{cons}$ $e_{S}^{3}$ $e_{S}^{4})\rightarrow e_{S}^{3}$ if $f=\mathtt{hd}$ and $f$ $(\mathtt{cons}$ $e_{S}^{3}$ $e_{S}^{4})\rightarrow e_{S}^{4}$ if $f=\mathtt{tl}$.  If $e_{S}^{1}=\mathtt{nil}$ then $f$ $\mathtt{nil}\rightarrow\mathtt{wrong}$ \emph{``Empty list"}.  If $e_{S}^{1}=SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ then $f$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow SH^{T}$ $e_{H}^{1}$ if $f=\mathtt{hd}$ and $f$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow SH^{[T]}$ $e_{H}^{2}$ if $f=\mathtt{tl}$.  $f$ $e_{S}^{1}\rightarrow\mathtt{wrong}$ \emph{``Not a list"} otherwise.
+$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $f$ $e_{S}^{1}\rightarrow f$ $e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $f$ $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{S}^{1}$ is a value otherwise.  $f$ $\mathtt{nil}\rightarrow\mathtt{wrong}$ \emph{``Empty list"}.  $\mathtt{hd}$ $(\mathtt{cons}$ $e_{S}^{3}$ $e_{S}^{4})\rightarrow e_{S}^{3}$.  $\mathtt{tl}$ $(\mathtt{cons}$ $e_{S}^{3}$ $e_{S}^{4})\rightarrow e_{S}^{4}$.  $\mathtt{hd}$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow SH^{T}$ $e_{H}^{1}$.  $\mathtt{tl}$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow SH^{[T]}$ $e_{H}^{2}$.  $f$ $e_{S}^{1}\rightarrow\mathtt{wrong}$ \emph{``Not a list"} $(e_{S}^{1}\not\in\lbrace\mathtt{nil},\mathtt{cons}$ $e_{S}^{3}$ $e_{S}^{4},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$.
 
 \end{case}
