--- a/proof/cases/progress/haskell-ml/cons-hv.tex
+++ b/proof/cases/progress/haskell-ml/cons-hv.tex
@@ -1,7 +1,7 @@
 \begin{case}
 
-$e_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$
+$e_{H}=\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}$
 
-$\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ is a value.
+$\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}$ is a value.
 
 \end{case}
