--- a/proof/cases/progress/haskell-ml/wrong.tex
+++ b/proof/cases/progress/haskell-ml/wrong.tex
@@ -1,6 +1,6 @@
 \begin{case}
 
-$e_{A}=\mathtt{wrong}^{T}$ $\mathrm{string}$ where $A\in\lbrace H,M\rbrace$
+$e_{A}=\mathtt{wrong}^{T}$ \emph{string} where $A\in\lbrace H,M\rbrace$
 
 $\mathtt{wrong}^{T}$ $\mathrm{string}\rightarrow$ \emph{\textbf{Error}: string}.
 
