--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -1,52 +1,105 @@
 \begin{theorem}
+
 \label{pn}
+
 If $\Gamma\vdash_{A}e_{A}^{1}:T$ and $e_{A}^{1}\rightarrow e_{A}^{2}$ then $\Gamma\vdash_{A}e_{A}^{2}:T$ where $A\in\lbrace H,M\rbrace$.  If $\Gamma\vdash_{S}e_{S}^{1}:TST$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ then $\Gamma\vdash_{S}e_{S}^{2}:TST$.
+
 \begin{proof}
-By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ and Lemma \ref{ec}.  Straightforward cases of Scheme preservation are elided.
+
+By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ and evaluation context preservation (Lemma \ref{ec}).  Straightforward cases of Scheme preservation are elided.
+
 \input{proof/cases/preservation/function-application.tex}
-\input{proof/cases/preservation/type-application.tex}
-\input{proof/cases/preservation/addition.tex}
-\input{proof/cases/preservation/subtraction.tex}
-\input{proof/cases/preservation/null-nil.tex}
-\input{proof/cases/preservation/null-cons.tex}
-\input{proof/cases/preservation/m:null-mh-cons.tex}
-\input{proof/cases/preservation/if0-true.tex}
-\input{proof/cases/preservation/if0-false.tex}
-\input{proof/cases/preservation/head-nil.tex}
-\input{proof/cases/preservation/tail-nil.tex}
-\input{proof/cases/preservation/h:head-cons.tex}
-\input{proof/cases/preservation/m:head-cons.tex}
-\input{proof/cases/preservation/h:tail-cons.tex}
-\input{proof/cases/preservation/m:tail-cons.tex}
+
 \input{proof/cases/preservation/fix.tex}
-\input{proof/cases/preservation/wrong.tex}
-\input{proof/cases/preservation/hm+mh:lump.tex}
-\input{proof/cases/preservation/hm+mh:number.tex}
-\input{proof/cases/preservation/hs+ms:number.tex}
-\input{proof/cases/preservation/hs+ms:number-error.tex}
-\input{proof/cases/preservation/hm+mh:list-nil.tex}
-\input{proof/cases/preservation/hs+ms:list-nil.tex}
-\input{proof/cases/preservation/hm:list-cons.tex}
-\input{proof/cases/preservation/hs+ms:list-cons.tex}
-\input{proof/cases/preservation/sm:list-cons.tex}
+
+\input{proof/cases/preservation/type-application.tex}
+
+\input{proof/cases/preservation/head-nil.tex}
+
+\input{proof/cases/preservation/tail-nil.tex}
+
+\input{proof/cases/preservation/h:head-cons.tex}
+
+\input{proof/cases/preservation/m:head-cons.tex}
+
+\input{proof/cases/preservation/h:tail-cons.tex}
+
+\input{proof/cases/preservation/m:tail-cons.tex}
+
 \input{proof/cases/preservation/mh:list-head-cons.tex}
-\input{proof/cases/preservation/mh:list-tail-cons.tex}
+
 \input{proof/cases/preservation/sh:list-head-cons.tex}
+
+\input{proof/cases/preservation/mh:list-tail-cons.tex}
+
 \input{proof/cases/preservation/sh:list-tail-cons.tex}
+
+\input{proof/cases/preservation/addition.tex}
+
+\input{proof/cases/preservation/subtraction.tex}
+
+\input{proof/cases/preservation/null-nil.tex}
+
+\input{proof/cases/preservation/null-cons.tex}
+
+\input{proof/cases/preservation/m:null-mh-cons.tex}
+
+\input{proof/cases/preservation/if0-true.tex}
+
+\input{proof/cases/preservation/if0-false.tex}
+
+\input{proof/cases/preservation/wrong.tex}
+
+\input{proof/cases/preservation/m:force.tex}
+
+\input{proof/cases/preservation/hm+mh:lump.tex}
+
+\input{proof/cases/preservation/hm+mh:number.tex}
+
+\input{proof/cases/preservation/hs+ms:number.tex}
+
+\input{proof/cases/preservation/hs+ms:number-error.tex}
+
+\input{proof/cases/preservation/hm+mh:list-nil.tex}
+
+\input{proof/cases/preservation/hs+ms:list-nil.tex}
+
+\input{proof/cases/preservation/hm:list-cons.tex}
+
+\input{proof/cases/preservation/hs+ms:list-cons.tex}
+
+\input{proof/cases/preservation/sm:list-cons.tex}
+
 \input{proof/cases/preservation/hm:list-mh-cons.tex}
+
 \input{proof/cases/preservation/sm:list-mh-cons.tex}
+
 \input{proof/cases/preservation/hs:list-sh-cons.tex}
+
 \input{proof/cases/preservation/ms:list-sh-cons.tex}
+
 \input{proof/cases/preservation/hs+ms:list-error.tex}
+
 \input{proof/cases/preservation/hs+ms:label.tex}
+
 \input{proof/cases/preservation/hs+ms:label-error.tex}
+
 \input{proof/cases/preservation/hm+mh:function.tex}
+
 \input{proof/cases/preservation/hs+ms:function.tex}
+
 \input{proof/cases/preservation/hs+ms:function-error.tex}
+
 \input{proof/cases/preservation/sh+sm:function.tex}
+
 \input{proof/cases/preservation/hm+mh:universal.tex}
+
 \input{proof/cases/preservation/hm+mh:universal-ms+hs.tex}
+
 \input{proof/cases/preservation/hs+ms:universal.tex}
+
 \input{proof/cases/preservation/sh+sm:universal.tex}
+
 \end{proof}
+
 \end{theorem}
