Reorganized model OS into lang/op-sem/lang structure. Interop OS now separated by lang.  Simplified OS figure captions.

--- a/model/haskell/operational-semantics/haskell.tex
+++ b/model/haskell/operational-semantics/haskell.tex
@@ -57,6 +57,6 @@ $\mathscr{E}[\mathtt{if0}$ $\overline{n}$ $e_{H}^{1}$ $e_{H}^{2}]_{H}\rightarrow
 
 $\mathscr{E}[\mathtt{wrong}^{T}$ string$]_{H}\rightarrow$ \textbf{Error}: string
 \end{tabular}
-\caption{Haskell core operational semantics}
-\label{chos}
+\caption{Haskell operational semantics}
+\label{hos}
 \end{figure}
