--- a/model/scheme/operational-semantics/scheme.tex
+++ b/model/scheme/operational-semantics/scheme.tex
@@ -125,6 +125,6 @@ $\mathscr{E}[\mathtt{wrong}$ $\mathrm{string}]_{S}\rightarrow$ \textbf{Error}: s
 
 $\mathscr{E}[\mathtt{force}$ $v_{S}]_{S}\rightarrow\mathscr{E}[v_{S}]$ $(v_{S}\neq SH^{T}$ $e_{H}$ or $v_{S}=SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))$
 \end{tabular}
-\caption{Scheme core operational semantics}
-\label{csos}
+\caption{Scheme operational semantics}
+\label{sos}
 \end{figure}
