--- a/model/scheme/typing-rules.tex
+++ b/model/scheme/typing-rules.tex
@@ -34,9 +34,9 @@
 \frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}\mathtt{force}\;e_{S}:TST}
 \]
 \[
-\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{H}e_{H}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}\;SH^{T}\;e_{H}:TST}
+\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{H}e_{H}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}SH^{T}\;e_{H}:TST}
 \quad
-\frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}\;SM^{T}\;e_{M}:TST}
+\frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}SM^{T}\;e_{M}:TST}
 \]
 \caption{Scheme typing rules}
 \label{str}
