--- a/model/ml/operational-semantics/ml.tex
+++ b/model/ml/operational-semantics/ml.tex
@@ -73,6 +73,6 @@ $\mathscr{E}[\mathtt{wrong}^{T}$ string$]_{M}\rightarrow$ \textbf{Error}: string
 
 $\mathscr{E}[\mathtt{force}$ $v_{M}]_{M}\rightarrow\mathscr{E}[v_{M}]$ $(v_{M}\neq{^{T}M}H^{T}$ $e_{H}$ or $v_{M}={^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))$
 \end{tabular}
-\caption{ML core operational semantics}
-\label{cmos}
+\caption{ML operational semantics}
+\label{mos}
 \end{figure}
