--- a/model/scheme/operational-semantics/ml.tex
+++ b/model/scheme/operational-semantics/ml.tex
@@ -3,28 +3,13 @@
 \begin{tabular}{l}
 \vspace{5pt}
 
-% sh - lump
-$\mathscr{E}[SH^{L}$ $(^{L}HS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
-
-\vspace{5pt}
-
 % sm - lump
 $\mathscr{E}[SM^{L}$ $(^{L}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
 
 \vspace{5pt}
 
-% sh - number
-$\mathscr{E}[SH^{N}$ $\overline{n}]_{S}\rightarrow\mathscr{E}[\overline{n}]$ \\
-
-\vspace{5pt}
-
 % sm - number
 $\mathscr{E}[SM^{N}$ $\overline{n}]_{S}\rightarrow\mathscr{E}[\overline{n}]$ \\
-
-\vspace{5pt}
-
-% sh - list - nil
-$\mathscr{E}[SH^{[T]}$ $\mathtt{nil}^{T[T_{i}/T_{i}^{a}]}]_{S}\rightarrow\mathscr{E}[\mathtt{nil}]$ \\
 
 \vspace{5pt}
 
@@ -43,15 +28,6 @@ $\mathscr{E}[SM^{[T]}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}
 
 \vspace{5pt}
 
-% sh - function
-$\mathscr{E}[SH^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{H})]_{S}\rightarrow$ \\
-
-\vspace{5pt}
-
-$\quad\mathscr{E}[\lambda x_{2}.(SH^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{H})$ $(^{T_{1}}HS$ $x_{2})))]$ \\
-
-\vspace{5pt}
-
 % sm - function
 $\mathscr{E}[SM^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{M})]_{S}\rightarrow$ \\
 
@@ -61,24 +37,14 @@ $\quad\mathscr{E}[\lambda x_{2}.(SM^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^
 
 \vspace{5pt}
 
-% sh - universal
-$\mathscr{E}[SH^{\forall X.T}$ $(\Lambda X.e_{H})]_{S}\rightarrow\mathscr{E}[SH^{T[L/X]}$ $((\Lambda X.e_{H})$ $\lbrace L\rbrace)]$ \\
-
-\vspace{5pt}
-
 % sm - universal
 $\mathscr{E}[SM^{\forall X.T}$ $(\Lambda X.e_{H})]_{S}\rightarrow\mathscr{E}[SM^{T[L/X]}$ $((\Lambda X.e_{M})$ $\lbrace L\rbrace)]$ \\
-
-\vspace{5pt}
-
-% sh - universal - hs
-$\mathscr{E}[SH^{\forall X.T}$ $(^{\forall X.T}HS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
 
 \vspace{5pt}
 
 % sm - universal - ms
 $\mathscr{E}[SM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$
 \end{tabular}
-\caption{Scheme interoperation operational semantics}
+\caption{Scheme-ML operational semantics}
 \label{isos}
 \end{figure}
