Fix: changed null? cons es es to null? cons vs vs.

--- a/model/scheme/operational-semantics/scheme.tex
+++ b/model/scheme/operational-semantics/scheme.tex
@@ -83,7 +83,7 @@ $\mathscr{E}[\mathtt{null?}$ $\mathtt{nil}]_{S}\rightarrow\mathscr{E}[\overline{
 
 \vspace{5pt}
 
-$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{2})]_{S}\rightarrow\mathscr{E}[\overline{1}]$ \\
+$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}\rightarrow\mathscr{E}[\overline{1}]$ \\
 
 \vspace{5pt}
 
