Changed sub/superscript order.

--- a/model/haskell/typing-rules.tex
+++ b/model/haskell/typing-rules.tex
@@ -55,7 +55,7 @@
 \[
 \frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T}{\Gamma\vdash_{H}{^{T}H}M^{T}\;e_{M}:T}
 \quad
-\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{H}{^{T}H}S\;e_{S}:T[T_{i}/T^{a}_{i}]}
+\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{H}{^{T}H}S\;e_{S}:T[T_{i}/T_{i}^{a}]}
 \]
 \caption{Haskell typing rules}
 \label{htr}
