Added some missing label stripping.

--- a/model/ml/operational-semantics/scheme.tex
+++ b/model/ml/operational-semantics/scheme.tex
@@ -29,7 +29,7 @@ $\mathscr{E}[^{[T]}MS$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{M
 \vspace{5pt}
 
 % ms - list error
-$\mathscr{E}[^{[T]}MS$ $v_{S}^{1}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}^{[T]}$ ``Not a list"$]$ \\
+$\mathscr{E}[^{[T]}MS$ $v_{S}^{1}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}^{[T[T_{i}/T_{i}^{a}]]}$ ``Not a list"$]$ \\
 
 \vspace{5pt}
 
@@ -53,7 +53,7 @@ $\mathscr{E}[^{T_{1}\rightarrow T_{2}}MS$ $(\lambda x_{1}.e_{S})]_{M}\rightarrow
 \vspace{5pt}
 
 % ms - function error
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}MS$ $v_{S}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}^{T_{1}\rightarrow T_{2}}$ ``Not a function"$]$ $(v_{S}\neq\lambda x.e_{S})$ \\
+$\mathscr{E}[^{T_{1}\rightarrow T_{2}}MS$ $v_{S}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}^{(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]}$ ``Not a function"$]$ $(v_{S}\neq\lambda x.e_{S})$ \\
 
 \vspace{5pt}
 
