--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -29,7 +29,7 @@ $\mathscr{E}[^{[T]}HS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{H}\rightarrow\
 \vspace{5pt}
 
 % hs - list error
-$\mathscr{E}[^{[T]}HS$ $v_{S}^{1}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{[T]}$ ``Not a list"$]$ \\
+$\mathscr{E}[^{[T]}HS$ $v_{S}^{1}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{[T[T_{i}/T_{i}^{a}]]}$ ``Not a list"$]$ \\
 
 \vspace{5pt}
 
@@ -43,12 +43,12 @@ $\mathscr{E}[^{T^{a}}HS$ $v_{S}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{T}$ `
 \vspace{5pt}
 
 % hs - function
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS$ $(\lambda x_{1}.e_{S})]_{H}\rightarrow\mathscr{E}[\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(^{T_{2}}HS$ $((\lambda x_{1}.e_{S})$ $(SH^{T_{1}}$ $x_{2})))]$ \\
+$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS$ $(\lambda x_{1}.e_{S})]_{H}\rightarrow\mathscr{E}[\lambda x_{2}:T_{1}[T_{i}/T_{i}^{a}].(^{T_{2}}HS$ $((\lambda x_{1}.e_{S})$ $(SH^{T_{1}}$ $x_{2})))]$ \\
 
 \vspace{5pt}
 
 % hs - function error
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS$ $v_{S}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{T_{1}\rightarrow T_{2}}$ ``Not a function"$]$ $(v_{S}\neq\lambda x.e_{S})$ \\
+$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS$ $v_{S}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]}$ ``Not a function"$]$ $(v_{S}\neq\lambda x.e_{S})$ \\
 
 \vspace{5pt}
 
