Changed H subscript to M.

--- a/model/scheme/operational-semantics/ml.tex
+++ b/model/scheme/operational-semantics/ml.tex
@@ -38,7 +38,7 @@ $\quad\mathscr{E}[\lambda x_{2}.(SM^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^
 \vspace{5pt}
 
 % sm - universal
-$\mathscr{E}[SM^{\forall X.T}$ $(\Lambda X.e_{H})]_{S}\rightarrow\mathscr{E}[SM^{T[L/X]}$ $((\Lambda X.e_{M})$ $\lbrace L\rbrace)]$ \\
+$\mathscr{E}[SM^{\forall X.T}$ $(\Lambda X.e_{M})]_{S}\rightarrow\mathscr{E}[SM^{T[L/X]}$ $((\Lambda X.e_{M})$ $\lbrace L\rbrace)]$ \\
 
 \vspace{5pt}
 
