Revised H/M ps cases.

--- a/proof/cases/progress/haskell-ml/predicate-m.tex
+++ b/proof/cases/progress/haskell-ml/predicate-m.tex
@@ -2,6 +2,6 @@
 
 $e_{M}=\mathtt{null?}$ $e_{M}^{1}$
 
-$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{1}$ is a value then $e_{M}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $e_{M}^{1}\in\lbrace\mathtt{nil}^{T},\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2},{^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ by canonical forms.  $\mathtt{null?}$ $\mathtt{nil}^{T}\rightarrow\overline{0}$.  If $e_{M}^{1}\in\lbrace\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2},{^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ then $\mathtt{null?}$ $e_{M}^{1}\rightarrow\overline{1}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $\mathtt{null?}$ $e_{M}^{1}\rightarrow\mathtt{null?}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{null?}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.
+$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{1}$ is a value then $e_{M}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}\in\lbrace\mathtt{nil}^{T},\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2},{^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ by canonical forms (Lemma \ref{cf}).  $\mathtt{null?}$ $\mathtt{nil}^{T}\rightarrow\overline{0}$.  If $e_{M}^{1}\in\lbrace\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2},{^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ then $\mathtt{null?}$ $e_{M}^{1}\rightarrow\overline{1}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $\mathtt{null?}$ $e_{M}^{1}\rightarrow\mathtt{null?}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{null?}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.
 
 \end{case}
