--- a/proof/cases/progress/haskell-ml/force.tex
+++ b/proof/cases/progress/haskell-ml/force.tex
@@ -2,7 +2,7 @@
 
 $e_{M}=\mathtt{force}$ $e_{M}^{1}$
 
-If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $\mathtt{force}$ $e_{M}^{1}\rightarrow\mathtt{force}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{force}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{M}^{1}$ is a value otherwise.  If $e_{M}^{1}\neq{^{T}M}H^{T}$ $e_{H}^{1}$ or $e_{M}^{1}={^{[T]}M}H^{T}$ $\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ then $\mathtt{force}$ $e_{M}^{1}\rightarrow e_{M}^{1}$.  If $e_{M}^{1}={^{T}M}H^{T}$ $e_{H}^{1}$ and $e_{M}^{1}\neq{^{[T]}M}H^{T}$ $\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ then $e_{H}^{1}$ is a value or $e_{H}^{1}\rightarrow e_{H}^{2}$ or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{H}^{1}\rightarrow e_{H}^{2}$ then $^{T}MH^{T}$ $e_{H}^{1}\rightarrow{^{T}M}H^{T}$ $e_{H}^{2}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $^{T}MH^{T}$ $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{H}^{1}$ is a value then $T$ determines the reduction of $^{T}MH^{T}$ $e_{H}^{1}$:
+If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $\mathtt{force}$ $e_{M}^{1}\rightarrow\mathtt{force}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{force}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{M}^{1}$ is a value otherwise.  If $e_{M}^{1}\neq{^{T}M}H^{T}$ $e_{H}^{1}$ or $e_{M}^{1}={^{[T]}M}H^{T}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ then $\mathtt{force}$ $e_{M}^{1}\rightarrow e_{M}^{1}$.  If $e_{M}^{1}={^{T}M}H^{T}$ $e_{H}^{1}$ and $e_{M}^{1}\neq{^{[T]}M}H^{T}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ then $e_{H}^{1}$ is a value or $e_{H}^{1}\rightarrow e_{H}^{2}$ or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{H}^{1}\rightarrow e_{H}^{2}$ then $^{T}MH^{T}$ $e_{H}^{1}\rightarrow{^{T}M}H^{T}$ $e_{H}^{2}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $^{T}MH^{T}$ $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{H}^{1}$ is a value then $T$ determines the reduction of $^{T}MH^{T}$ $e_{H}^{1}$:
 
 \begin{subcase}
 
@@ -24,7 +24,7 @@ $e_{H}^{1}=\overline{n}$ by canonical forms (Lemma \ref{cf}).  $^{N}MH^{N}$ $\ov
 
 $T=[T_{1}]$
 
-$e_{H}^{1}\in\lbrace\mathtt{nil}^{T_{1}},\mathtt{cons}$ $e_{H}^{3}$ $e_{H}^{4}\rbrace$ by canonical forms.  $^{[T_{1}]}MH^{[T_{1}]}$ $\mathtt{nil}^{T_{1}}\rightarrow\mathtt{nil}^{T_{1}}$.  $^{[T_{1}]}MH^{[T_{1}]}$ $(\mathtt{cons}$ $e_{H}^{3}$ $e_{H}^{4})$ is a value.
+$e_{H}^{1}=\mathtt{nil}^{T_{1}}$ by canonical forms (Lemma \ref{cf}).  $^{[T_{1}]}MH^{[T_{1}]}$ $\mathtt{nil}^{T_{1}}\rightarrow\mathtt{nil}^{T_{1}}$.
 
 \end{subcase}
 
@@ -40,7 +40,7 @@ Cannot occur because $T_{1}^{a}$ occurs only in $^{T_{1}^{a}}MS$ $e_{S}$.
 
 $T=T_{1}\rightarrow T_{2}$
 
-$e_{H}^{1}=\lambda x_{1}:T_{1}.e_{H}^{2}$ by canonical forms (Lemma \ref{cf}).  $^{T_{1}\rightarrow T_{2}}MH^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}.e_{H}^{2})\rightarrow\lambda x_{2}:T_{1}.(^{T_{2}}MH^{T_{2}}$ $((\lambda x_{1}:T_{1}.e_{H}^{2})$ $(^{T_{1}}HM^{T_{1}}$ $x_{2})))$.
+$e_{H}^{1}=\lambda x_{1}:T_{1}.e_{H}^{3}$ by canonical forms (Lemma \ref{cf}).  $^{T_{1}\rightarrow T_{2}}MH^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}.e_{H}^{3})\rightarrow\lambda x_{2}:T_{1}.(^{T_{2}}MH^{T_{2}}$ $((\lambda x_{1}:T_{1}.e_{H}^{3})$ $(^{T_{1}}HM^{T_{1}}$ $x_{2})))$.
 
 \end{subcase}
 
@@ -48,7 +48,7 @@ $e_{H}^{1}=\lambda x_{1}:T_{1}.e_{H}^{2}$ by canonical forms (Lemma \ref{cf}).  
 
 $T=\forall X.T_{1}$
 
-$e_{H}^{1}\in\lbrace\Lambda X.e_{H}^{2},{^{\forall X.T_{1}}H}S$ $v_{S}\rbrace$ by canonical forms (Lemma \ref{cf}).  $^{\forall X.T_{1}}MH^{\forall X.T_{1}}$ $(\Lambda X.e_{H}^{2})\rightarrow\Lambda X.(^{T_{1}}MH^{T_{1}}$ $e_{H}^{2})$.  $^{\forall X.T_{1}}MH^{\forall X.T_{1}}$ $(^{\forall X.T_{1}}HS$ $v_{S})\rightarrow{^{\forall X.T_{1}}M}S$ $v_{S}$.
+$e_{H}^{1}\in\lbrace\Lambda X.e_{H}^{3},{^{\forall X.T_{1}}H}S$ $v_{S}\rbrace$ by canonical forms (Lemma \ref{cf}).  $^{\forall X.T_{1}}MH^{\forall X.T_{1}}$ $(\Lambda X.e_{H}^{3})\rightarrow\Lambda X.(^{T_{1}}MH^{T_{1}}$ $e_{H}^{3})$.  $^{\forall X.T_{1}}MH^{\forall X.T_{1}}$ $(^{\forall X.T_{1}}HS$ $v_{S})\rightarrow{^{\forall X.T_{1}}M}S$ $v_{S}$.
 
 \end{subcase}
 
